# dokijam

./: .gitignore  .gitmodules  CMakeLists.txt  doki_jam  makefile  what_the_story_was_supposed_to_be.txt
.cache/clangd/index/: IMG.c.19CE24C00F9BB077.idx  IMG_WIC.c.C854E1AE8E76D971.idx  IMG_anim.c.857752CA85E30F1E.idx  IMG_anim.h.4B3BCEA9C7008A80.idx  IMG_avif.c.6896EC73543E353F.idx  SDL.c.F4E6EDEE4B7A859F.idx  (+709 more)
art/: dad.aseprite  doki.aseprite  dokitiles.aseprite  dumb_boom.aseprite  final_bossfight_background.aseprite  final_bossfight_other.aseprite  final_bossfight_prototype.aseprite  fire_crystal.aseprite  ice_crystal.aseprite  lightning_crystal.aseprite  nature_crystal.aseprite  tester.aseprite  tilemap.aseprite  water_crystal.aseprite
art/dragoons/: firedragoon.aseprite  icedragoon.aseprite  lightningdragoon.aseprite  naturedragoon.aseprite  waterdragoon.aseprite
art/rivers/: LightningRiver.aseprite  Pentagon.aseprite
art/shots/: fire_shot.aseprite  ice_shot.aseprite  lightning_shot.aseprite  nature_shot.aseprite  water_shot.aseprite
include/engine/: animation.cpp  animation.hpp  audio.cpp  point.cpp  point.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  texture.cpp  texture.hpp
src/: component.hpp  globals.hpp  i_collider.hpp  i_element.hpp  main.cpp  platform.cpp  platform.hpp  player.cpp  player.hpp  sprite.hpp  tilemap.cpp  tilemap.hpp  tileset.hpp  ui.cpp  ui.hpp  utility.cpp  utility.hpp
src/ecs/: boss.cpp  collision.cpp  component.hpp  dragoon.cpp  dragoon_init.cpp  ecs.hpp  ecs_utility.cpp  ecs_utility.hpp  explosion.cpp  input.cpp  render.cpp  spawn.cpp
(+13 files in other folders)
